@@ -2,9 +2,9 @@
 #define AUTOBUILD_H
 // change the FALSE to TRUE for autoincrement of build number
 #define INCREMENT_VERSION TRUE
-#define FILEVER        0,3,0,33
-#define PRODUCTVER     0,3,0,33
-#define STRFILEVER     _T("0.3.0.33")
-#define STRPRODUCTVER  _T("0.3.0.33")
+#define FILEVER        0,3,0,35
+#define PRODUCTVER     0,3,0,35
+#define STRFILEVER     _T("0.3.0.35")
+#define STRPRODUCTVER  _T("0.3.0.35")
 #define STRPRODUCTDATE  _T("2008-02-03")
 #endif // AUTOBUILD_H
